<resources>
    <string name="app_name">CambodiaTourism</string>

    // Splash
    <string name="s1">Let\'s Enjoy the\n Beautiful Place</string>
    <string name="s2">Explore the new places in the Cambodia\n and get new experiences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Fragment Home
    <string name="text1">ស្វា​គម​ន៏​ការ​ត្រ​លប់​មក​វិញ</string>
    <string name="text2">ដំណើរកំសាន្តថ្មីៗ</string>
    <string name="text3">ស្វែងរកកន្លែងល្អបំផុតដើម្បី\n ធ្វើដំណើរកម្សាន</string>
    <string name="text4">ស្វែងរកទីតាំង....</string>\
    <string name="text5">ឃើញ​ទាំងអស់</string>
    <string name="text6">ពេញនិយម</string>
    <string name="text7">កន្លែងច្រើនទៀត</string>
    <string name="text8">Phonom Penh</string>
    <string name="text9">Phnom Penh City</string>

    <string name="explore_now">Explore Now</string>
    <string name="search">Search</string>

    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login and Register</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="already_have_account">Already Have Account? Login</string>
    <string name="or_login_with">or login with</string>

    <string name="notifications">Application  Notifications</string>
    <string name="welcome">Welcome to Our Tourism</string>
    <string name="login_info">Change Information</string>
    <string name="name">Your Username</string>


    // Place Detail
    <string name="p1">ប្រាសាទអំបែងនំ ស្ថិតក្នុងទីតាំងសម្បូណ៌ដោយប្រាសាទបុរាណជាច្រើនកន្លែងគ្រាន់តែប្រាសាទភាគច្រើនបានបែកបាក់អស់។ អ្នកស្រុកប្រាប់ថាឈ្មោះនេះមាននិទានដូចរឿង សេដ្ឋីខ្វះអំបែង គឺរឿងព្រេង «ដឹងសងដឹង អំបែងសងអំបែង» ដែរ។ ចំណែកអ្នកភូមិខ្លះរស់នៅក្បែរៗប្រាសាទរៀបរាប់ថា “កាលពីមុនមកគេនៅប្រាសាទនេះ គេអាចមកខ្ចីឆ្នាំងចានយកទៅធ្វើបុណ្យបាន។ លុះក្រោយមកដោយសារអ្នកខ្ចី មានចិត្តមិនស្មោះទើបនៅសល់តែអំបែងចាននិងឆ្នាំង ទើបប្រាសាទនេះមានឈ្មោះថា ប្រាសាទអំបែង។</string>
</resources>